--- a/css/stargazing.css
+++ b/css/stargazing.css
@@ -152,7 +152,7 @@
 
 /* Specific dropdown z-index adjustments */
 #location-toggle .dropdown-menu {
-    z-index: 99992; /* Location dropdown */
+    z-index: 999992; /* Location dropdown */
 }
 
 /* Dropdown Menu Styles */
